trying to fix alignment

--- a/csci340lab1/main.css
+++ b/csci340lab1/main.css
@@ -77,7 +77,6 @@ ul {
 }
 
 #openingLine {
-  display: block;
   align-items: center;
 }
 
